--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup environment variables
         run: |
           touch .env
-          echo POSTGRES_URL=${{ secrets.POSTGRE_URL }}
+          echo POSTGRES_URL=${{ secrets.POSTGRE_URL }} > .env
       - name: Run tests
         run: |
           npm install
