--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,8 @@ jobs:
           npm install
           npx prisma db push
           npm run test:unit
+      - name: Deploy
+        env:
+          deploy_url: ${{ secrets.RENDER_URL }}
+        run: |
+          curl "$deploy_url"
